--- a/index.html
+++ b/index.html
@@ -1,29 +1,244 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>My Portfolio</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Gonzaga Portfolio</title>
   <style>
-    body { font-family: Arial; text-align: center; background: #f4f4f4; }
-    h1 { color: #333; margin-top: 50px; }
-    .card { background: white; width: 300px; margin: 20px auto; padding: 20px; border-radius: 10px; box-shadow: 0 0 10px #ccc; }
+    * {
+      box-sizing: border-box;
+      margin: 0;
+      padding: 0;
+      font-family: 'Poppins', sans-serif;
+      scroll-behavior: smooth;
+    }
+
+    body {
+      background: #0f172a;
+      color: #e2e8f0;
+      line-height: 1.6;
+      overflow-x: hidden;
+    }
+
+    header {
+      background: linear-gradient(135deg, #1e293b, #334155);
+      color: #e2e8f0;
+      text-align: center;
+      padding: 100px 20px 80px;
+      box-shadow: 0 4px 20px rgba(0,0,0,0.3);
+      position: relative;
+    }
+
+    header img {
+      width: 130px;
+      height: 130px;
+      border-radius: 50%;
+      border: 3px solid #38bdf8;
+      object-fit: cover;
+      margin-bottom: 20px;
+      transition: transform 0.4s ease, box-shadow 0.4s ease;
+    }
+
+    header img:hover {
+      transform: scale(1.08);
+      box-shadow: 0 0 25px #38bdf8;
+    }
+
+    header h1 {
+      font-size: 2.5rem;
+      margin-bottom: 10px;
+      color: #38bdf8;
+      text-shadow: 0 0 10px #38bdf8;
+    }
+
+    header p {
+      font-size: 1.1rem;
+      opacity: 0.9;
+    }
+
+    section {
+      max-width: 900px;
+      margin: 50px auto;
+      padding: 0 20px;
+      opacity: 0;
+      transform: translateY(30px);
+      animation: fadeIn 1s forwards;
+    }
+
+    @keyframes fadeIn {
+      to { opacity: 1; transform: translateY(0); }
+    }
+
+    h2 {
+      color: #38bdf8;
+      margin-bottom: 15px;
+      font-size: 1.6rem;
+      border-left: 4px solid #38bdf8;
+      padding-left: 10px;
+    }
+
+    .about p,
+    .hobbies p,
+    .contact p {
+      font-size: 1.05rem;
+      background: #1e293b;
+      padding: 20px;
+      border-radius: 10px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+    }
+
+    .projects {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+      gap: 20px;
+      margin-top: 20px;
+    }
+
+    .card {
+      background: #1e293b;
+      border-radius: 10px;
+      padding: 20px;
+      box-shadow: 0 4px 10px rgba(0,0,0,0.3);
+      transition: transform 0.3s ease, box-shadow 0.3s ease;
+    }
+
+    .card:hover {
+      transform: translateY(-8px);
+      box-shadow: 0 8px 20px rgba(56,189,248,0.3);
+    }
+
+    .card h3 {
+      color: #38bdf8;
+      margin-bottom: 10px;
+    }
+
+    .skills {
+      display: flex;
+      flex-wrap: wrap;
+      gap: 15px;
+      margin-top: 20px;
+    }
+
+    .skill {
+      background: #38bdf8;
+      color: #0f172a;
+      padding: 10px 18px;
+      border-radius: 20px;
+      font-weight: 600;
+      box-shadow: 0 3px 10px rgba(0,0,0,0.3);
+      transition: transform 0.2s ease, background 0.3s ease;
+    }
+
+    .skill:hover {
+      transform: scale(1.08);
+      background: #7dd3fc;
+    }
+
+    a {
+      color: #38bdf8;
+      text-decoration: none;
+      transition: color 0.3s ease;
+    }
+
+    a:hover {
+      color: #7dd3fc;
+      text-decoration: underline;
+    }
+
+    footer {
+      text-align: center;
+      margin-top: 80px;
+      padding: 20px;
+      font-size: 0.9rem;
+      color: #94a3b8;
+      border-top: 1px solid #334155;
+    }
+
+    
+    section:nth-of-type(odd) {
+      animation-delay: 0.3s;
+    }
+    section:nth-of-type(even) {
+      animation-delay: 0.6s;
+    }
   </style>
 </head>
 <body>
-  <h1>Hi, I'm Ri Enz 👋</h1>
-  <p>Welcome to my portfolio!</p>
-  <div class="card">
+  <header>
+    <img src="https://avatars.githubusercontent.com/u/9919?v=4" alt="Profile Photo">
+    <h1>Hi, I'm Gonzaga, Florencio </h1>
+    <p>3rd Year BSIT Student | Aspiring Developer | Gamer & Creator</p>
+  </header>
+
+  <section class="about">
     <h2>About Me</h2>
-    <p>I’m a student passionate about coding, design, and learning new things.</p>
-  </div>
-  <div class="card">
-    <h2>Projects</h2>
-    <ul>
-      <li><a href="#">Zombie Survival Game</a></li>
-      <li><a href="#">Infographic Design Project</a></li>
-      <li><a href="#">System Integration Research</a></li>
-    </ul>
-  </div>
-  <footer>© 2025 Ri Enz</footer>
+    <p>
+      I'm a 3rd-year BSIT student who’s passionate about technology, gaming, and learning how things work behind the scenes.
+      I enjoy exploring new ideas especially when it comes to game mechanics and interactive design.
+      I’m currently focused on improving my skills in game development and UI design while pushing myself to keep learning every day.
+      My goal is to finish my studies strong and continue building creative and meaningful projects that challenge my curiosity.
+    </p>
+  </section>
+
+  <section class="skills-tools">
+    <h2>Skills & Tools</h2>
+    <div class="skills">
+      <div class="skill">HTML</div>
+      <div class="skill">C++</div>
+      <div class="skill">C</div>
+      <div class="skill">Roblox Studio</div>
+      <div class="skill">Figma</div>
+    </div>
+  </section>
+
+  <section class="projects">
+    <h2>My Projects</h2>
+    <div class="projects">
+      <div class="card">
+        <h3>Survive the Madness</h3>
+        <p>
+          A Roblox-based survival game project built from the ground up, featuring custom environments and game logic.
+          Players must survive waves of zombies on an isolated island after a general’s crash landing.
+          My main focus in this project was learning scripting, environment design, and how to make gameplay feel immersive and scary.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>UI Design Project</h3>
+        <p>
+          A clean and modern interface design created using Figma, focused on usability and visual balance.
+          This project helped me understand how layouts, spacing, and hover effects influence the overall user experience.
+        </p>
+      </div>
+
+      <div class="card">
+        <h3>System Integration Study</h3>
+        <p>
+          A research project exploring how different systems and APIs connect in real world applications.
+          This gave me a clearer understanding of how data and functionality flow between platforms in integrated environments.
+        </p>
+      </div>
+    </div>
+  </section>
+
+  <section class="hobbies">
+    <h2>Hobbies & Interests</h2>
+    <p>
+      Outside of tech, I spend my time gaming, riding my fixed gear bike, and playing basketball.
+      I find that cycling and gaming both teach focus and timing qualities that also help me when learning programming and game design.
+    </p>
+  </section>
+
+  <section class="contact">
+    <h2>Contact Me</h2>
+    <p>
+      You can reach me via <a href="mailto:florenciogonzaga067@gmail.com">email</a> or check out my projects on
+      <a href="https://github.com/Gonzaga-svg" target="_blank">GitHub</a>.
+    </p>
+  </section>
+
+  <footer>
+    © 2025 Gonzaga, Florencio | Built with ❤️ using HTML & CSS
+  </footer>
 </body>
 </html>
